[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/inventory/module_slot/description_panel/DescriptionPanel.gd" type="Script" id=1]
[ext_resource path="res://UI/inventory/module_slot/description_panel/ModuleChip/ModuleChip.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/inventory/description_panel/bg.png" type="Texture" id=3]
[ext_resource path="res://Fonts/dpcomic.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 40.9056, 20, 174.622, 217 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[node name="DescriptionPanel" type="Panel"]
margin_right = 300.0
margin_bottom = 400.0
rect_min_size = Vector2( 300, 400 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )

[node name="ModuleContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 18.0
margin_right = -25.0
margin_bottom = -20.0

[node name="CenterContainer" type="CenterContainer" parent="ModuleContainer"]
margin_right = 250.0
margin_bottom = 60.0

[node name="Icon" type="TextureRect" parent="ModuleContainer/CenterContainer"]
margin_left = 95.0
margin_right = 155.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
expand = true

[node name="MarginContainer2" type="MarginContainer" parent="ModuleContainer"]
margin_top = 64.0
margin_right = 250.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 5 )

[node name="Title" type="Label" parent="ModuleContainer"]
margin_top = 73.0
margin_right = 250.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 3 )
text = "Trajectory control \"Circular\""
align = 1
autowrap = true
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="ModuleContainer"]
margin_top = 132.0
margin_right = 250.0
margin_bottom = 137.0
rect_min_size = Vector2( 0, 5 )

[node name="Description" type="Label" parent="ModuleContainer"]
margin_top = 141.0
margin_right = 250.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 4 )
text = "description"
uppercase = true

[node name="ModuleChip" parent="ModuleContainer" instance=ExtResource( 2 )]
margin_top = 161.0
margin_right = 250.0
margin_bottom = 189.0

[node name="ModuleTags" type="GridContainer" parent="ModuleContainer"]
margin_top = 193.0
margin_right = 250.0
margin_bottom = 193.0
columns = 4

[node name="AbilityTags" type="GridContainer" parent="ModuleContainer"]
margin_top = 197.0
margin_right = 250.0
margin_bottom = 197.0
columns = 4
